--- a/src/dialog/dialogs/quizme.html
+++ b/src/dialog/dialogs/quizme.html
@@ -11,8 +11,8 @@
         <td align="center">
             </p><b><center>Quizzes</center></b></p>
             <select class="quizzes" size="16"></select><br/>
-            <input value="Add Quiz" type="button" class="butter-btn btn-green addQz"></input><br/>
-            <input value="Delete" type="button" class="butter-btn btn-red delQz"></input>
+            <input value="+" type="button" class="butter-btn btn-green addQz"></input>
+            <input value="-" type="button" class="butter-btn btn-red delQz"></input>
         </td>
         
         <td><table class="showQuestion">
