Remove Items from the webmakernav, and compensate style

--- a/public/src/ui/webmakernav/webmakernav.html
+++ b/public/src/ui/webmakernav/webmakernav.html
@@ -1,10 +1,10 @@
 <div class="webmaker-nav-container">
   <div class="webmaker-nav-top">
     <ul class="webmaker-nav primary">
-      <li><a class="on" data-tab="webmaker">Webmaker</a></li>
+<!--       <li><a class="on" data-tab="webmaker">Webmaker</a></li>
       <li><a data-tab="projects">Projects</a></li>
       <li><a data-tab="tools">Tools</a></li>
-      <li><a data-tab="events">Events</a></li>
+      <li><a data-tab="events">Events</a></li> -->
       <li><a href="#" class="webmaker-feedback-btn">Feedback</a></li>
     </ul>
     <ul class="webmaker-nav user-info">
